converted more to jquery

--- a/grid.html
+++ b/grid.html
@@ -44,7 +44,7 @@
 
         
         <form class="color-pallette">
-          <h3>Select Color</h3>
+          <h3>Color Pallette</h3>
           <div class="form-group" id="colorGroup">
             <div class="radio">
               <label>
@@ -60,6 +60,7 @@
               </label> 
             </div> 
           </div>
+          <button id="addColor" class="btn btn-default">Add Color</button>
           <button id="clearColors" class="btn btn-default">Clear Colors</button>
         </form>
         
