--- a/grid.html
+++ b/grid.html
@@ -25,10 +25,10 @@
             <h3>Dimensions</h3>
             <div class="form-group">
               <label for="Rows"><small>Rows</small></label>
-              <input type="number" class="form-control dimensions" id="inputRows" placeholder="10" value="10">
+              <input type="number" class="form-control dimensions" id="inputRows" placeholder="15" value="15">
 
               <label for="Stitches(Columns)"><small>Stitches</small></label>
-              <input type="number" class="form-control dimensions" id="inputColumns" placeholder="10" value="10">
+              <input type="number" class="form-control dimensions" id="inputColumns" placeholder="15" value="15">
             </div>      
         </form>
 
@@ -36,10 +36,10 @@
           <h3>Gauge (per 4")</h3>
           <div class="form-group">
             <label for="rowsPerInch">Rows</label>
-            <input type="number" class="form-control gauge" id="rowsGauge" placeholder="10" value="10">
+            <input type="number" class="form-control gauge" id="rowsGauge" placeholder="20" value="20">
 
             <label for="stitchesPerInch">Stitches</label>
-            <input type="number" class="form-control gauge" id="stitchesGauge" placeholder="10" value="10">
+            <input type="number" class="form-control gauge" id="stitchesGauge" placeholder="20" value="20">
           </div>
         </form>
 
@@ -47,20 +47,21 @@
         <form class="color-palette">
           <h3>Color Palette</h3>
           <div class="form-group" id="colorGroup">
-            <div class="input-group radio">
-                <input type="radio" name="colorRadios" value="#555555" checked="checked">
+            <label for="input-group radio">Background Color</label>
+            <div class="input-group radio background">
+                <input type="radio" name="colorRadios" id="backgroundColor" value="#FFFFFF">
                 <input type="text" value="" class="form-control color-name" />
                 <span class="input-group-addon"><i></i></span>
             </div>
             
             <div class="input-group radio clone">
-                <input type="radio" name="colorRadios" value="#FFF">
+                <input type="radio" name="colorRadios" value="#555555" checked="checked">
                 <input type="text" value="" class="form-control color-name" />
                 <span class="input-group-addon"><i></i></span>
             </div> 
           </div>
           <button id="addColor" class="btn btn-default">Add Color</button>
-          <button id="clearColors" class="btn btn-default">Clear Colors</button>
+          <button id="resetColors" class="btn btn-default">Reset Colors</button>
         </form>
       </div>
 
