lets not break things now

--- a/grid.html
+++ b/grid.html
@@ -55,7 +55,7 @@
             </div>
             
             <div class="input-group radio clone">
-                <input type="radio" name="colorRadios" value="#555555" checked="checked">
+                <input type="radio" name="colorRadios" id="cloneColor" value="#555555" checked="checked">
                 <input type="text" value="" class="form-control color-name" />
                 <span class="input-group-addon"><i></i></span>
             </div> 
