--- a/public/grid.html
+++ b/public/grid.html
@@ -16,8 +16,8 @@
   <body>
     <div class="container-fluid">
       <div class="page-header">
-        <h1 class="page-title">Knitter's Grid </h1>
-        <p class="title-description">a gauge specific canvas for colorwork design</p>
+        <h1 class="page-title">ColorWork</h1>
+        <p class="title-description">a gauge specific canvas for knitted colorwork design</p>
       </div>  
 
       <div class="col-md-3">
