--- a/public/grid.html
+++ b/public/grid.html
@@ -16,8 +16,10 @@
   <body>
     <div class="container-fluid">
       <div class="page-header">
-        <h1 class="page-title">ColorWork</h1>
+        <h1 class="page-title">ColorWork-In-Progress</h1>
         <p class="title-description">a gauge specific canvas for knitted colorwork design</p>
+        <p class="message">Hi, Thanks for checking out my App.  Soon you will be able to save your grid. Play with it, break it, send me an email with your thoughts and suggestions.
+        -Amelia</p>  
       </div>  
 
       <div class="col-md-3">
@@ -25,10 +27,10 @@
             <h3>Dimensions</h3>
             <div class="form-group">
               <label for="Rows"><small>Rows</small></label>
-              <input type="number" class="form-control dimensions" id="inputRows" placeholder="15" value="15">
+              <input type="number" class="form-control dimensions box-style" id="inputRows" placeholder="15" value="15">
 
               <label for="Stitches(Columns)"><small>Stitches</small></label>
-              <input type="number" class="form-control dimensions" id="inputColumns" placeholder="15" value="15">
+              <input type="number" class="form-control dimensions box-style" id="inputColumns" placeholder="15" value="15">
             </div>
             <div class="size"></div>      
         </form>
@@ -37,15 +39,15 @@
           <h3>Gauge (per 4")</h3>
           <div class="form-group">
             <label for="rowsPerInch">Rows</label>
-            <input type="number" class="form-control gauge" id="rowsGauge" placeholder="20" value="20">
+            <input type="number" class="form-control gauge box-style" id="rowsGauge" placeholder="20" value="20">
 
             <label for="stitchesPerInch">Stitches</label>
-            <input type="number" class="form-control gauge" id="stitchesGauge" placeholder="20" value="20">
+            <input type="number" class="form-control gauge box-style" id="stitchesGauge" placeholder="20" value="20">
           </div>
         </form>
 
         
-        <form class="color-palette">
+        <form>
           <h3>Color Palette</h3>
           <div class="form-group" id="colorGroup">
             <label for="input-group radio">Background Color</label>
@@ -67,7 +69,7 @@
       </div>
 
       <div class="col-md-9">
-        <div id="displayGrid" class="grid-container">
+        <div id="displayGrid" class="grid">
         </div>
       </div>
     </div>
