--- a/public/grid.html
+++ b/public/grid.html
@@ -18,8 +18,7 @@
       <div class="page-header">
         <h1 class="page-title">ColorWork-In-Progress</h1>
         <p class="title-description">a gauge specific canvas for knitted colorwork design</p>
-        <p class="message">Hi, Thanks for checking out my App.  Soon you will be able to save your grid. Play with it, break it, send me an email with your thoughts and suggestions.
-        -Amelia</p>  
+        <p class="message">I have to rebuild this grid using canvas instead of html elements so users will be able to print and save designs. Until then, it is just fun to play with.</p>  
       </div>  
 
       <div class="col-md-3">
